# mcp

./: CONTRIBUTE.md  README.md  pyproject.toml
.github/workflows/: deploy-uvx-main.yml
pluglayer_mcp/: __init__.py  client.py  server.py  settings.py
pluglayer_mcp/tools/: cicd_health.py  compute.py  deployments.py  domains.py  identity_projects.py  shared.py  tasks_admin.py
